--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(10, 50px);
-    grid-template-rows: repeat(10, 50px);
+
+    background-color: red;
 }
 
 .square {
@@ -13,4 +13,68 @@
 
 .square.painted {
     background-color: black;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: rgb(179, 111, 137);
+}
+
+
+.chat {
+    margin-left: 20px;
+    width: 300px; /* Adjust as needed */
+    height: 500px; /* Adjust as needed */
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.messages {
+    flex: 1;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    padding: 5px;
+    max-height: 400px;
+    background-color: #f9f9f9;
+}
+
+.message {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #e1e1e1;
+    overflow-wrap: break-word; /* Another property to ensure long words wrap */
+
+}
+
+input[type="text"] {
+    width: calc(100% - 90px);
+    padding: 5px;
+}
+
+button {
+    width: 80px;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
 }
