--- a/public/styles.css
+++ b/public/styles.css
@@ -90,6 +90,8 @@ button { /*send button*/
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 10px; /* Adjust the value to create the desired space */
+
 }
 
 /*username screen---------------------------*/
