--- a/public/styles.css
+++ b/public/styles.css
@@ -7,10 +7,15 @@ color: var(--userColor);
 }
 
 
-/*grid-----------------------*/
+/*canvas-----------------------*/
+
+.canvas-container {
+    background-color: white;
+    border-radius: 5px;
+}
+  
 .grid {
     display: grid;
-    background-color: white;
     padding: 10px;
 }
 
@@ -35,6 +40,30 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     z-index: 5;
+}
+
+.color-palette {
+    display: flex;
+    width: 420px;
+    flex-wrap: wrap;
+    padding: 10px 0;
+    justify-content: center;
+  }
+  
+  .color-button {
+    width: 30px;
+    height: 30px;
+    border: #ffffff;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 10%;
+    transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55); /* Apply transition to both states */
+  }
+
+
+.color-button[data-selected="true"] {
+    transform: scale(1.5); /* Scale the element to 120% of its original size */
+    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Add transition for bounce effect */
 }
 
 
