--- a/public/styles.css
+++ b/public/styles.css
@@ -148,12 +148,29 @@ body {
     background-color: #eec5eb;
 }
 
+
+.message-icon {
+    /* The filter will be applied dynamically via JavaScript for the color */
+    margin-right: 3px;
+}
+
+.author-name {
+    margin-right: 3px;
+}
+
+/* Styles for messages without an author */
+.message.message-no-author {
+    color: black;
+    text-align: center;
+    align-items: center;
+}
+
 .message {
     margin-bottom: 5px;
     padding: 5px;
     border-radius: 5px;
     background-color: #ffffff;
-    overflow-wrap: break-word; /* Another property to ensure long words wrap */
+    overflow-wrap: break-word; /* Ensure long words wrap */
 }
 
 button { /*send button*/
@@ -218,11 +235,12 @@ button { /*send button*/
     padding: 5px;
     border-radius: 5px;
     overflow-wrap: break-word; 
+    color: white;
 }
 
 .player-icon {
-    width: 32px;
-    height: 32px;
+
+    font-size: 24px;
     margin-right: 10px;
 }
 
