--- a/public/styles.css
+++ b/public/styles.css
@@ -150,12 +150,7 @@ body {
 
 
 .message-icon {
-    /* The filter will be applied dynamically via JavaScript for the color */
-    margin-right: 3px;
-}
-
-.author-name {
-    margin-right: 3px;
+    padding-right: 3px;
 }
 
 /* Styles for messages without an author */
@@ -171,6 +166,7 @@ body {
     border-radius: 5px;
     background-color: #ffffff;
     overflow-wrap: break-word; /* Ensure long words wrap */
+    vertical-align: middle; /* Ensures the icon aligns with text */
 }
 
 button { /*send button*/
@@ -244,12 +240,6 @@ button { /*send button*/
     margin-right: 10px;
 }
 
-.message-icon {
-    width: 20px; /* Adjust size as needed */
-    height: 20px; /* Adjust size as needed */
-    margin-right: 8px; /* Adjust space between icon and text */
-    vertical-align: middle; /* Ensures the icon aligns with text */
-}
 
 .player-name {
     font-weight: bold;
