--- a/public/styles.css
+++ b/public/styles.css
@@ -55,12 +55,19 @@ body {
     background-color: white;
     border-radius: 5px;
 }
+
   
 .grid {
     display: grid;
     aspect-ratio: 1/1;
     padding: 10px;
+    position: relative; /* Ensure pseudo-element is positioned relative to this container */
+    overflow: hidden;
+    transition: box-shadow 0.3s ease-in-out;
 }
+.grid[data-complete] {
+    box-shadow: 0 0 30px rgb(201, 223, 255); /* Enhanced glow on hover */
+} 
 
 .square {
     background-color: white;
@@ -104,6 +111,36 @@ body {
 .color-button[data-selected="true"] {
     transform: scale(1.5); /* Scale the element to 120% of its original size */
     transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Add transition for bounce effect */
+}
+
+.shiny::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -150%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(120deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
+    transform: skewX(-20deg);
+    transition: 0.7s;
+    pointer-events: none;
+}
+
+/* Define the swoosh animation */
+.animate-shine::before {
+    animation: shine-swoosh 1.5s;
+}
+
+@keyframes shine-swoosh {
+    0% {
+        left: -150%;
+    }
+    50% {
+        left: 100%;
+    }
+    100% {
+        left: 150%;
+    }
 }
 
 
