language selection, dfficulty command

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,11 @@
 color: var(--userColor);
 }
 
+/*user name enter screen------------------------------*/
+.input-label {
+    margin-right: 7px;
+}
+
 /*big stuff----------------------*/
 
 body {
