--- a/public/styles.css
+++ b/public/styles.css
@@ -216,8 +216,14 @@ body {
     cursor: pointer;
     border-radius: 10%;
     transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55); /* Apply transition to both states */
+    user-select: none; /* Prevents text selection */
+
   }
 
+.color-button:focus {
+    outline: none;
+    box-shadow: none; /* Optional, in case there's a shadow */
+}
 
 .color-button[data-selected="true"] {
     transform: scale(1.5); /* Scale the element to 120% of its original size */
