--- a/public/styles.css
+++ b/public/styles.css
@@ -208,27 +208,42 @@ body {
     justify-content: center;
   }
   
-  .color-button {
-    width: 30px;
-    height: 30px;
-    border: #ffffff;
-    margin: 5px;
+.color-button {
+    position: relative; /* Position relative to contain the ::after element */
+    border: white;
+    width: 35px;
+    height: 35px;
+    margin: 2.5px;
     cursor: pointer;
     border-radius: 10%;
-    transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55); /* Apply transition to both states */
     user-select: none; /* Prevents text selection */
-
-  }
+}
 
 .color-button:focus {
     outline: none;
     box-shadow: none; /* Optional, in case there's a shadow */
 }
 
-.color-button[data-selected="true"] {
-    transform: scale(1.5); /* Scale the element to 120% of its original size */
-    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Add transition for bounce effect */
+.color-button::after {
+    background-color: inherit; /* Inherit the background color */
+    border: inherit;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10%; /* Match the button's border radius */
+    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Transition for bounce effect */
+    pointer-events: none; /* Allow clicks to pass through */
 }
+
+.color-button[data-selected="true"]::after {
+    transform: scale(1.5); /* Scale the visual effect instead of the button */
+    z-index: 10;
+
+}
+
 
 .shiny::before {
     content: '';
@@ -315,7 +330,6 @@ body {
 button { /*send button*/
     width: 80px;
     padding: 5px;
-    margin-left: 10px;
 }
 
 .input-container { /*message input*/
