changed pallete again

--- a/public/styles.css
+++ b/public/styles.css
@@ -209,13 +209,13 @@ body {
   }
   
 .color-button {
-    position: relative; /* Position relative to contain the ::after element */
-    border: white;
     width: 35px;
     height: 35px;
+    border: #ffffff;
     margin: 2.5px;
     cursor: pointer;
     border-radius: 10%;
+    transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55); /* Apply transition to both states */
     user-select: none; /* Prevents text selection */
 }
 
@@ -224,26 +224,10 @@ body {
     box-shadow: none; /* Optional, in case there's a shadow */
 }
 
-.color-button::after {
-    background-color: inherit; /* Inherit the background color */
-    border: inherit;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10%; /* Match the button's border radius */
-    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Transition for bounce effect */
-    pointer-events: none; /* Allow clicks to pass through */
+.color-button[data-selected="true"] {
+    transform: scale(0.6); /* Scale the element to 120% of its original size */
+    transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55); /* Add transition for bounce effect */
 }
-
-.color-button[data-selected="true"]::after {
-    transform: scale(1.5); /* Scale the visual effect instead of the button */
-    z-index: 10;
-
-}
-
 
 .shiny::before {
     content: '';
